got access to the form controls and disabled the submit button unless it's valid

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,11 @@
 .container {
   margin-top: 30px;
 }
+
+input.ng-invalid.ng-touched{
+  border: 2px solid rgb(183, 13, 13);
+}
+
+input.ng-valid{
+  border: 2px solid green;
+}
