--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,8 @@
             id="username"
             class="form-control"
             formControlName="username">
+          <span *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched" 
+            class="help-block">Please enter a valid username!</span>
         </div>
         <div class="form-group">
           <label for="email">email</label>
@@ -17,6 +19,8 @@
             id="email"
             class="form-control"
             formControlName="email">
+          <span *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched" 
+            class="help-block">Please enter a valid email!</span>
         </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
@@ -26,7 +30,9 @@
               formControlName="gender"> {{ gender }}
           </label>
         </div>
-        <button class="btn btn-primary" type="submit">Submit</button>
+        <span *ngIf="!signupForm.valid && signupForm.touched" 
+            class="help-block">Please enter a valid data!</span>
+        <button [disabled]="!signupForm.valid" class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
   </div>
