--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,15 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
+       <div [formGroupName]="userData">
+         <div class="form-group">
           <label for="username">Username</label>
           <input
             type="text"
             id="username"
             class="form-control"
             formControlName="username">
-          <span *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched" 
+          <span *ngIf="!signupForm.get('userData.username').valid && signupForm.get('username').touched" 
             class="help-block">Please enter a valid username!</span>
         </div>
         <div class="form-group">
@@ -19,9 +20,10 @@
             id="email"
             class="form-control"
             formControlName="email">
-          <span *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched" 
+          <span *ngIf="!signupForm.get('userData.email').valid && signupForm.get('email').touched" 
             class="help-block">Please enter a valid email!</span>
         </div>
+       </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
             <input
