--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-       <div [formGroupName]="userData">
+       <div formGroupName="userData">
          <div class="form-group">
           <label for="username">Username</label>
           <input
@@ -10,7 +10,7 @@
             id="username"
             class="form-control"
             formControlName="username">
-          <span *ngIf="!signupForm.get('userData.username').valid && signupForm.get('username').touched" 
+          <span *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched" 
             class="help-block">Please enter a valid username!</span>
         </div>
         <div class="form-group">
@@ -20,7 +20,7 @@
             id="email"
             class="form-control"
             formControlName="email">
-          <span *ngIf="!signupForm.get('userData.email').valid && signupForm.get('email').touched" 
+          <span *ngIf="!signupForm.get('userData.email').valid && signupForm.get('userData.email').touched" 
             class="help-block">Please enter a valid email!</span>
         </div>
        </div>
@@ -31,6 +31,13 @@
               [value]="gender"
               formControlName="gender"> {{ gender }}
           </label>
+        </div>
+        <div formArrayName="hobbies">
+          <h4>Your Hobbies</h4>
+          <button class="btn btn-default" type="button" (click)="onAddHobby()">Add Hobby</button>
+          <div class="form-group" *ngFor="let hobbyControl of getControls(); let i = index">
+            <input type="text" class="form-control" [formControlName]="i">
+          </div>
         </div>
         <span *ngIf="!signupForm.valid && signupForm.touched" 
             class="help-block">Please enter a valid data!</span>
